Add temporary layout

--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
 </head>
 
 <body>
-    Library
+    <header>Library</header>
+    <main>
+        <button id="add-btn">+ Add book</button>
+        <div id="grid">
+        </div>
+    </main>
+    <footer>This is footer</footer>
 </body>
 
 </html>
