--- a/index.html
+++ b/index.html
@@ -6,34 +6,56 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Library</title>
-    <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="icons8-books-flaticons-flat-96.png">
+    <script src="script.js" defer></script>
+    <script src="https://kit.fontawesome.com/5f5b4189ad.js" crossorigin="anonymous" defer></script>
 </head>
 
 <body>
-    <header>Library</header>
+    <header>
+        <div class="container">
+            <h1>Library</h1>
+        </div>
+    </header>
     <main>
-        <button id="addBtn">+ Add book</button>
-        <button id="addExampleBtn">+ Add example</button>
-        <div class="pageOverlay"></div>
-        <div class="modalOverlay">
-            <div id="bookModal">
-                <form id="bookForm">
-                    <input class="input" type="text" id="title" placeholder="Title" required maxlength="100">
-                    <input class="input" type="text" id="author" placeholder="Author" required maxlength="100">
-                    <input class="input" type="number" id="pages" placeholder="Pages" required min="1" max="10000">
-                    <div class="status">
-                        Did you read it?
-                        <input class="checkbox" type="checkbox" id="isRead">
-                    </div>
-                </form>
-                <button type="submit" form="bookForm" id="submitBtn">Submit</button>
+        <div class="container">
+            <div class="addButtons">
+                <button id="addBtn">Add book</button>
+                <button id="addExampleBtn">Add example</button>
+            </div>
+            <div id="pageOverlay"></div>
+            <div id="modalOverlay">
+                <div id="bookModal">
+                    <form id="bookForm">
+                        <input class="input" type="text" id="title" placeholder="Title" required maxlength="100">
+                        <input class="input" type="text" id="author" placeholder="Author" required maxlength="100">
+                        <input class="input" type="number" id="pages" placeholder="Pages" required min="1" max="10000">
+                        <div class="status">
+                            Did you read it?
+                            <input class="checkbox" type="checkbox" id="isRead">
+                        </div>
+                    </form>
+                    <button type="submit" form="bookForm" id="submitBtn">Submit</button>
+                </div>
+            </div>
+            <div id="grid">
             </div>
         </div>
-        <div id="grid">
-        </div>
     </main>
-    <footer>This is footer</footer>
+    <footer>
+        <div class="container">
+            <p>
+                <span>Quality is not expansive, it's priceless<span class="emoji">🍒</span>&nbsp;|&nbsp;</span>
+                <span>Mariusz Ciastoń 2023 &nbsp;
+                    <a href="https://github.com/mariuszciaston/" target="_blank" rel="noopener"><i class="fab fa-github fa-2x" aria-hidden="true"></i></a>
+                </span>
+            </p>
+        </div>
+    </footer>
 </body>
 
 </html>
