Add empty message, change book card layout

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
     </header>
     <main>
-        <div class="container">
+        <div class="main container">
             <div class="addButtons">
                 <button id="addBtn">Add book</button>
                 <button id="addExampleBtn">Add example</button>
@@ -44,6 +44,7 @@
                     <button type="submit" form="bookForm" id="submitBtn">Submit</button>
                 </div>
             </div>
+            <div id="empty">Looks like your library is empty. Add something, don't be shy!</div>
             <div id="grid">
             </div>
         </div>
