--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                     <button type="submit" form="bookForm" id="submitBtn">Submit</button>
                 </div>
             </div>
-            <div id="empty">Looks like your library is empty. Add something, don't be shy!</div>
-            <div id="grid">
+            <div id="grid" class="show">
             </div>
+            <div id="empty">Looks like your library is empty. Add something, don't be shy!</div>
         </div>
     </main>
     <footer>
