--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;600;700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="favicon.png">
     <script src="script.js" defer></script>
     <script src="https://kit.fontawesome.com/5f5b4189ad.js" crossorigin="anonymous" defer></script>
@@ -52,7 +52,7 @@
     <footer>
         <div class="container">
             <p>
-                <span>Quality is not expansive, it's priceless<span class="emoji">🍒</span>&nbsp;|&nbsp;</span>
+                <span>Quality is not expensive, it's priceless<span class="emoji">🍒</span>&nbsp;|&nbsp;</span>
                 <span>Mariusz Ciastoń 2023 &nbsp;
                     <a href="https://github.com/mariuszciaston/" target="_blank" rel="noopener"><i class="fab fa-github fa-2x" aria-hidden="true"></i></a>
                 </span>
