Footer change, remove example book

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <footer>
         <div class="container">
             <p>
-                <span>Quality is not expensive, it's priceless<span class="emoji">🍒</span>&nbsp;|&nbsp;</span>
+                <!-- <span>Quality is not expensive, it's priceless<span class="emoji">🍒</span>&nbsp;|&nbsp;</span> -->
                 <span>Mariusz Ciastoń 2023 &nbsp;
                     <a href="https://github.com/mariuszciaston/" target="_blank" rel="noopener"><i class="fab fa-github fa-2x" aria-hidden="true"></i></a>
                 </span>
